Fix jumping distance for main page

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -50,3 +50,10 @@
     padding: 16px 2px;
     align: center;
   }
+
+  #projects{
+    scroll-margin-top: 100px;
+  }
+  #publications{
+    scroll-margin-top: 100px;
+  }
